--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,12 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-mail'
     implementation 'org.jsoup:jsoup:1.15.4'
 
+    testImplementation 'org.mockito:mockito-core:5.5.0'
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.5.0'
+
+    testImplementation group: 'junit', name: 'junit', version: '4.5'
+    implementation 'junit:junit:4.12'
+
 }
 
 
